# pcomp

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  log_generator.py  pyproject.toml  results_stats_explorer.py
.github/workflows/: test_and_format.yml
pcomp/: __init__.py
pcomp/binning/: Binner.py  IQR_Binner.py  KMeans_Binner.py  OuterPercentileBinner.py  __init__.py
pcomp/emd/: __init__.py  core.py  emd.py  extraction.py  ks_compare.py
pcomp/emd/Comparators/: __init__.py  ukkonen.py
pcomp/emd/Comparators/bootstrap/levenshtein/: levenshtein.py
pcomp/emd/Comparators/bootstrap/ukkonen/: ukkonen.py
pcomp/emd/Comparators/classic_bootstrap/: classic_bootstrap_comparator.py
pcomp/emd/Comparators/classic_bootstrap/levenshtein/: levenshtein.py
pcomp/emd/Comparators/comparing_stars/: __init__.py  ged_approximate_comparator.py
pcomp/emd/Comparators/double_bootstrap/: __init__.py  double_bootstrap_compare.py
pcomp/emd/Comparators/double_bootstrap/levenshtein/: __init__.py  levenshtein.py
pcomp/emd/Comparators/kolmogorov_smirnov/: ks_compare.py
pcomp/emd/Comparators/permutation_test/: __init__.py  permutation_test_comparator.py
pcomp/emd/approximations/: __init__.py
pcomp/emd/approximations/comparing_stars/: __init__.py  comparing_stars.py
pcomp/emd/approximations/string_edit_distance/: __init__.py  ukkonen.py
pcomp/emd/comparators/_experimental/: __init__.py
pcomp/emd/comparators/bootstrap/: __init__.py  bootstrap_comparator.py
pcomp/emd/comparators/classic_bootstrap/: __init__.py  classic_bootstrap_comparator.py
pcomp/emd/comparators/double_bootstrap/: double_bootstrap_compare.py
pcomp/emd/comparators/kolmogorov_smirnov/: ks_compare.py
pcomp/emd/comparators/permutation_test/: __init__.py  permutation_test_comparator.py
pcomp/emd/distances/: levenshtein.py
pcomp/first_approach/: __init__.py  algorithm.py
pcomp/utils/: __init__.py  constants.py  data.py  preparation.py  typing.py  utils.py
tests/: conftest.py  testing_utilities.py
tests/emd/: test_core.py  test_emd.py  test_extraction.py
tests/emd/Comparators/classic_bootstrap/: test_classic_bootstrap_comparator.py
tests/emd/Comparators/permutation_test/: test_permutation_test_comparator.py
tests/emd/approximations/comparing_stars/: test_comparing_stars.py
tests/first_approach/: test_alg.py
tests/utils/: test_atomic_log_conversion.py  test_lifecycle_log_conversion.py  test_preparation.py  test_utils.py
(+35 files in other folders)
