[tool.poetry]
name = "pcomp"
version = "0.1.0"
description = ""
authors = ["Cameron Pitsch <cameron.pitsch@rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pm4py = "^2.7.8.2"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
wasserstein = "1.0.1"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
