[tool.poetry]
name = "pcomp"
version = "0.1.0"
description = ""
authors = ["Cameron Pitsch <cameron.pitsch@rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pm4py = "^2.7.8.2"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
wasserstein = "1.1.0"
tqdm = "^4.66.1"
pydantic = "^2.5.1"
strsimpy = "^0.2.1"
scipy = "^1.12.0"
pot = "0.9.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
ipykernel = "^6.27.1"
pandas-stubs = "^2.1.4.231218"
types-tqdm = "^4.66.0.20240106"
types-seaborn = "^0.13.2.20240205"


[tool.poetry.group.ui]
optional = true

[tool.poetry.group.ui.dependencies]
streamlit = "^1.31.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
