[project]
name = "pcomp"
version = "0.2.0"
description = "A library for Process Hypothesis Testing"
authors = [{ name = "Cameron Pitsch", email = "cameron.pitsch@rwth-aachen.de" }]
readme = "README.md"
keywords = ["process mining", "hypothesis testing", "process hypothesis testing"]
requires-python = ">=3.10"

dependencies = [
    "pm4py>=2.7.8.2",
    "pandas>=2.1.2",
    "wasserstein>=1.1.0",
    "tqdm>=4.66.1",
    "strsimpy>=0.2.1",
    "scipy>=1.12.0,<1.14.0", # Only used for KS Compare..
    "pot>=0.9.2",
    "pathos>=0.3.2",
    "rustxes>=0.2.2",
    "scikit-learn>=1.3.2",
]

[dependency-groups]
dev = [
    "black>=23.11.0",
    "pytest>=8.3.5",
    "pre-commit>=3.5.0",
    "pytest-cov>=6.1.1",
    "mypy>=1.7.0",
    "ipykernel>=6.27.1",
    "pandas-stubs>=2.1.4.231218",
    "types-tqdm>=4.66.0.20240106",
]

[project.urls]
source = "https://github.com/cpitsch/pcomp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
